overlays/dev/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sapfire
spec:
  rules:
    - host: app.dev.sapfire.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client
                port:
                  number: 80
    - host: auth.dev.sapfire.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
  tls:
    - hosts: ["app.dev.sapfire.test"]
      secretName: sapfire-app-tls
    - hosts: ["auth.dev.sapfire.test"]
      secretName: sapfire-auth-tls
